--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "antd": "^6.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.575.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-redux": "^9.2.0",
